--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   firebase_core: ^2.20.0
   firebase_auth: ^4.12.0
   google_sign_in: ^6.2.1
+  connectivity_plus: ^5.0.1
 
 dev_dependencies:
   flutter_test:
